--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg" alt="Sharknado 3">
+                <div class="dsmovie-card-description">
+                    <h3>Sharknado 3: Oh Hell No!</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
