--- a/index.html
+++ b/index.html
@@ -31,10 +31,118 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/c86l1k9lkVFlW8JeGKe9kL1Q76L.jpg"
+                            alt="Ilha das Flores">
                         <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
+                            <h3>Ilha das Flores</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/lOrM3OQhHlzEkpF7Ih3GghecrA8.jpg"
+                            alt="Life of Brian">
+                        <div class="dsmovie-card-description">
+                            <h3>Life of Brian</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/54Ky0CMzoktoaX1fszyTZ3JoSgc.jpg"
+                            alt="Waking Life">
+                        <div class="dsmovie-card-description">
+                            <h3>Waking Life</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/pUk9E84XInJiv1OiOMmpZwl4D5o.jpg"
+                            alt="No Country For Old Men">
+                        <div class="dsmovie-card-description">
+                            <h3>No Country For Old Men</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/nh6YJdN7C66IMckrAM5WJ6Ycrhf.jpg"
+                            alt="Brilho Eterno">
+                        <div class="dsmovie-card-description">
+                            <h3>Brilho Eterno de uma Mente Sem Lembrança</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/a2pPepVPtKY7E4XEkT7W3ZxUOY5.jpg"
+                            alt="Druk">
+                        <div class="dsmovie-card-description">
+                            <h3>Druk</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/xwzdkrURr0J1735IKnlPXq7AZnC.jpg"
+                            alt="Vidas ao Vento">
+                        <div class="dsmovie-card-description">
+                            <h3>Vidas ao Vento</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/bc7FVUDZ4EdMNGleBjprG3GdbhA.jpg"
+                            alt="Poderoso Chefão: Parte III">
+                        <div class="dsmovie-card-description">
+                            <h3>Poderoso Chefão: Parte III</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/aamZEB2Vacy348tahBHeEVw0yjs.jpg"
+                            alt="Persépolis">
+                        <div class="dsmovie-card-description">
+                            <h3>Persépolis</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/aO6Z7ErkEoahGFKYdEs4k4ilWFe.jpg"
+                            alt="Pineapple Express">
+                        <div class="dsmovie-card-description">
+                            <h3>Pineapple Express</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
 
                         </div>
@@ -55,118 +163,10 @@
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/n3gb8oqP9BeRCUsCmZVaT5eltPH.jpg"
+                            alt="Guardiões da Galáxia Vol. 2">
                         <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wz9GW2xNzbpfjr3Tc5rKdGuPD49.jpg"
-                            alt="Sharknado 3">
-                        <div class="dsmovie-card-description">
-                            <h3>Sharknado 3: Oh Hell No!</h3>
+                            <h3>Guardiões da Galáxia Vol. 2</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
 
                         </div>
