Avaliação com estrelas

--- a/index.html
+++ b/index.html
@@ -35,8 +35,20 @@
                             alt="Ilha das Flores">
                         <div class="dsmovie-card-description">
                             <h3>Ilha das Flores</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
