Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
                             alt="Life of Brian">
                         <div class="dsmovie-card-description">
                             <h3>Life of Brian</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -71,7 +84,20 @@
                             alt="Waking Life">
                         <div class="dsmovie-card-description">
                             <h3>Waking Life</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -83,7 +109,20 @@
                             alt="No Country For Old Men">
                         <div class="dsmovie-card-description">
                             <h3>No Country For Old Men</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -95,7 +134,20 @@
                             alt="Brilho Eterno">
                         <div class="dsmovie-card-description">
                             <h3>Brilho Eterno de uma Mente Sem Lembrança</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -107,7 +159,20 @@
                             alt="Druk">
                         <div class="dsmovie-card-description">
                             <h3>Druk</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -119,7 +184,20 @@
                             alt="Vidas ao Vento">
                         <div class="dsmovie-card-description">
                             <h3>Vidas ao Vento</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -131,7 +209,20 @@
                             alt="Poderoso Chefão: Parte III">
                         <div class="dsmovie-card-description">
                             <h3>Poderoso Chefão: Parte III</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -143,7 +234,20 @@
                             alt="Persépolis">
                         <div class="dsmovie-card-description">
                             <h3>Persépolis</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -155,7 +259,20 @@
                             alt="Pineapple Express">
                         <div class="dsmovie-card-description">
                             <h3>Pineapple Express</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -167,7 +284,20 @@
                             alt="Sharknado 3">
                         <div class="dsmovie-card-description">
                             <h3>Sharknado 3: Oh Hell No!</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
@@ -179,7 +309,20 @@
                             alt="Guardiões da Galáxia Vol. 2">
                         <div class="dsmovie-card-description">
                             <h3>Guardiões da Galáxia Vol. 2</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-full.svg" alt="Star">
+                                    <img src="Imagens/star-half.svg" alt="Star">
+                                </div>
+                                <p>
+                                    19 avaliações
+                                </p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
 
                         </div>
                     </div>
